--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/react": "^3.4.0",
     "@astrojs/svelte": "^5.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@babel/runtime": "^7.26.7",
+    "@astrojs/netlify": "^4.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.9.2",
